--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -1,25 +1,16 @@
 FROM jenkins/jenkins:lts
 
+# Switch to root
 USER root
 
-RUN apt-get update && \
-    apt-get -y upgrade && \
-    apt-get install -y curl ca-certificates gnupg lsb-release && \
-    rm -rf /var/lib/apt/lists/*
-
-# Install Docker CLI
+# Install Docker CLI (static binary, no apt-get)
 RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-24.0.9.tgz \
     | tar -xz -C /usr/local/bin --strip-components=1 docker/docker && \
     chmod +x /usr/local/bin/docker
 
-# Install kubectl (fixed version)
-# RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
-#     chmod +x kubectl && \
-#     mv kubectl /usr/local/bin/
+# Install kubectl (latest stable)
+# RUN curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+#     chmod +x kubectl && mv kubectl /usr/local/bin/
 
-# Create docker group
-ARG DOCKER_GID=999
-RUN groupadd -g ${DOCKER_GID} docker || true && \
-    usermod -aG docker jenkins
-
+# Switch back to Jenkins user
 USER jenkins
