--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -9,8 +9,9 @@ RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-24.
     chmod +x /usr/local/bin/docker
 
 # Install kubectl (latest stable)
-# RUN curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
-#     chmod +x kubectl && mv kubectl /usr/local/bin/
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+    chmod +x kubectl && \
+    mv kubectl /usr/local/bin/
 
 # Switch back to Jenkins user
 USER jenkins
