--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -11,9 +11,11 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - $HOME/.kube:/var/jenkins_home/.kube:ro
+      #- $HOME/.kube:/var/jenkins_home/.kube:ro
     networks:
       - jenkins-net
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
 
   sonarqube:
     image: sonarqube:community
