--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,21 +1,17 @@
-version: '3.8'
-
 services:
   jenkins:
     build: ../jenkins-docker
     container_name: jenkins
     user: root
+    network_mode: "host"  
     ports:
       - "8080:8080"
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      #- $HOME/.kube:/var/jenkins_home/.kube:ro
-    networks:
-      - jenkins-net
-    extra_hosts:
-    - "host.docker.internal:host-gateway"
+      - ~/jenkins-kube/config:/var/jenkins_home/.kube/config:ro   # container-ready kubeconfig
+      - $HOME/.minikube:/home/jenkins/.minikube:ro                # host Minikube files
 
   sonarqube:
     image: sonarqube:community
