--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,30 +1,27 @@
+version: '3.8'
+
 services:
+  # Jenkins container (host network)
   jenkins:
     build: ../jenkins-docker
     container_name: jenkins
     user: root
-    ports:
-      - "8080:8080"
-      - "50000:50000"
+    network_mode: "host"   # uses host network
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/jenkins-kube/config:/var/jenkins_home/.kube/config:ro
       - $HOME/.minikube:/home/jenkins/.minikube:ro
-    networks:
-      - jenkins-net   # same network as SonarQube
+    environment:
+      - KUBECONFIG=/var/jenkins_home/.kube/config
 
+  # SonarQube container
   sonarqube:
     image: sonarqube:community
     container_name: sonarqube
     ports:
-      - "9000:9000"
-    networks:
-      - jenkins-net
+      - "9000:9000"  
+    restart: unless-stopped
 
 volumes:
   jenkins_home:
-
-networks:
-  jenkins-net:
-    driver: bridge
